--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red"></color>
+
+    <color name="lavanda">#b4aee8</color>
+    <color name="rosita">#ffe3fe</color>
+
+    <color name="fondo">#440a67</color>
+
 </resources>
