--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".lists.category.CategoryAdapter"
+    tools:context=".fragments.category.CategoryAdapter"
     android:layout_marginTop="8dp"
     >
 
