--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/button_navigation_menu" />
+        app:menu="@menu/button_navigation_menu"
+        android:background="@color/lavanda"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
