--- a/app/src/main/res/layout/item_main_list.xml
+++ b/app/src/main/res/layout/item_main_list.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".fragments.category.CategoryAdapter"
     android:layout_marginTop="8dp"
+    android:id="@+id/mainList"
     >
 
 
     <ImageView
-        android:id="@+id/imgKindProduct"
+        android:id="@+id/imgMainList"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:scaleType="centerCrop"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/nameKindProduct"
+        android:id="@+id/nameMainList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -28,13 +28,11 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="16dp"
-        android:text="PRODUCT"
         android:textAllCaps="false"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imgKindProduct"
-        app:layout_constraintEnd_toEndOf="@+id/imgKindProduct"
-        tools:ignore="MissingConstraints"
-        style="@style/OrangeButton"/>
+        app:layout_constraintBottom_toBottomOf="@+id/imgMainList"
+        app:layout_constraintEnd_toEndOf="@+id/imgMainList"
+        style="@style/OrangeButton" />
 
 
 
