--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,16 +6,44 @@
     app:startDestination="@id/categoryFragment">
     <fragment
         android:id="@+id/categoryFragment"
-        android:name="com.example.proyectofinal.fragments.category.CategoryFragment"
+        android:name="com.example.proyectofinal.fragments.category.ListCategoryFragment"
         android:label="fragment_category"
         tools:layout="@layout/fragment_category" >
         <action
-            android:id="@+id/action_categoryFragment_to_fragment2"
-            app:destination="@id/fragment2" />
+            android:id="@+id/action_categoryFragment_to_listPlatformFragment"
+            app:destination="@id/listPlatformFragment">
+        </action>
+        <action
+            android:id="@+id/action_categoryFragment_to_listProductFragment"
+            app:destination="@id/listProductFragment" />
     </fragment>
     <fragment
-        android:id="@+id/fragment2"
-        android:name="com.example.proyectofinal.fragments.Fragment2"
-        android:label="fragment_2"
-        tools:layout="@layout/fragment_2" />
+        android:id="@+id/listPlatformFragment"
+        android:name="com.example.proyectofinal.fragments.listPlatform.ListPlatformFragment"
+        android:label="fragment_list_platform"
+        tools:layout="@layout/fragment_list_platform" >
+        <argument
+            android:name="idCategory"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_listPlatformFragment_to_listProductFragment"
+            app:destination="@id/listProductFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/listProductFragment"
+        android:name="com.example.proyectofinal.fragments.listProduct.ListProductFragment"
+        android:label="fragment_list_product"
+        tools:layout="@layout/fragment_list_product">
+        <argument
+            android:name="idCategoryPlatform"
+            app:argType="integer[]" />
+        <action
+            android:id="@+id/action_listProductFragment_to_productFragment"
+            app:destination="@id/productFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productFragment"
+        android:name="com.example.proyectofinal.fragments.product.ProductFragment"
+        android:label="fragment_product"
+        tools:layout="@layout/fragment_product" />
 </navigation>
