--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="button">#FF6200EE</color>
+    <color name="morao">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
@@ -18,5 +18,11 @@
     <color name="pink_pressed">#F49599</color>
     <color name="pink_main">#DE586B</color>
 
+
+    <color name="ps4">#004085</color>
+    <color name="ps5">#2381d9</color>
+    <color name="nintendo">#f40000</color>
+    <color name="xbox">#54c202</color>
+    <color name="xboxSeriesX">#155724</color>
 
 </resources>
