--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="fragment 2, bitch"
+        android:text="you are bitch and you know it (;"
         android:textSize="50dp"
         android:gravity="center"/>
 
