Implement login fragment in navigation bar

--- a/app/src/main/res/menu/button_navigation_menu.xml
+++ b/app/src/main/res/menu/button_navigation_menu.xml
@@ -14,7 +14,7 @@
 
 
     <item
-        android:id="@+id/bottom_nav_news"
+        android:id="@+id/logInFragment"
         android:title="Carrito"
         android:icon="@drawable/ic_baseline_shopping_cart_24"/>
 
