Create new parameters for layouts sizes

--- a/app/src/main/res/values/texts.xml
+++ b/app/src/main/res/values/texts.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="checkin_textsize">16dp</dimen>
-
     <dimen name="checkin_heigh">60dp</dimen>
     <dimen name="checkin_paddingLeft">12dp</dimen>
     <dimen name="checkin_paddingLeft_spinner">3dp</dimen>
     <dimen name="checkin_margin">0dp</dimen>
+    <dimen name="login_heigh">60dp</dimen>
+    <dimen name="login_paddingLeft">12dp</dimen>
+    <dimen name="product_margin_top_price">30dp</dimen>
+    <dimen name="product_margin_top_bottom">40dp</dimen>
 </resources>
