--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red"></color>
+    <color name="yellow">#f3ff09</color>
 
     <color name="lavanda">#b4aee8</color>
     <color name="rosita">#ffe3fe</color>
