--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,6 +48,9 @@
         <argument
             android:name="idProduct"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_productFragment_to_logInFragment"
+            app:destination="@id/logInFragment" />
     </fragment>
     <fragment
         android:id="@+id/fragment23"
@@ -62,6 +65,13 @@
         <action
             android:id="@+id/action_logInFragment_to_listUserFragment"
             app:destination="@id/listUserFragment" />
+        <action
+            android:id="@+id/action_logInFragment_to_checkInFragment"
+            app:destination="@id/checkInFragment" />
+        <argument
+            android:name="back"
+            android:defaultValue="false"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/listUserFragment"
@@ -72,4 +82,9 @@
             android:id="@+id/action_listUserFragment_to_logInFragment"
             app:destination="@id/logInFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/checkInFragment"
+        android:name="com.example.proyectofinal.fragments.CheckInFragment"
+        android:label="fragment_check_in"
+        tools:layout="@layout/fragment_check_in" />
 </navigation>
