--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -180,9 +180,10 @@ Por culpa de una terrible tormenta, Link naufraga y acaba llegando a la costa de
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="#ff9e3d"
-                android:progressBackgroundTint="#c7b600"
-                android:progressTint="#f5ff00"
+
+                android:progressBackgroundTint="#CCC9AD"
+                android:progressTint="#E6FF00"
+
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
