--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,16 @@
     <color name="xbox">#54c202</color>
     <color name="xboxSeriesX">#155724</color>
 
+
+
+
+    <color name="azulOscuro">#212159</color>
+    <color name="cinza">#aaaaaa</color>
+    <color name="amarillo">#f2bc25</color>
+    <color name="verde">#4dae51</color>
+    <color name="rojo">#ba0001</color>
+    <color name="azulClaro">#2096f3</color>
+
+
+
 </resources>
