--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,45 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.CartFragment">
+    tools:context=".fragments.CartFragment"
+    android:background="@color/grey_disabled">
 
 
     <TextView
         android:id="@+id/txtTopBarCart"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:background="@color/white"
         android:gravity="center"
         android:text="CARRITO"
         android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/txtNotLogInCart"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
+        android:background="@color/white"
         android:gravity="center"
         android:text="NO HA INICIADO SESION"
         android:textSize="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtTopBarCart"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/btnBuyCart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTopBarCart" />
+
 
     <Button
         android:id="@+id/btnLogInCart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="iniciar sesion"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNotLogInCart" />
-
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCart"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnBuyCart"
-        app:layout_constraintTop_toBottomOf="@+id/txtTopBarCart" />
+        android:paddingTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtTotalCart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTopBarCart"
+        android:background="@color/grey_disabled"/>
 
     <Button
         android:id="@+id/btnBuyCart"
@@ -50,6 +61,18 @@
         android:layout_height="wrap_content"
         android:text="Comprar"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txtTotalCart"
+        android:layout_width="match_parent"
+        android:layout_height="84dp"
+        android:background="@color/white"
+        android:gravity="end"
+        android:textSize="20dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/txtNotLogInCart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
