--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/categoryFragment">
     <fragment
         android:id="@+id/categoryFragment"
-        android:name="com.example.proyectofinal.fragments.category.ListCategoryFragment"
+        android:name="com.example.proyectofinal.fragments.ListCategoryFragment"
         android:label="fragment_category"
         tools:layout="@layout/fragment_category">
         <action
@@ -18,7 +18,7 @@
     </fragment>
     <fragment
         android:id="@+id/listPlatformFragment"
-        android:name="com.example.proyectofinal.fragments.listPlatform.ListPlatformFragment"
+        android:name="com.example.proyectofinal.fragments.ListPlatformFragment"
         android:label="fragment_list_platform"
         tools:layout="@layout/fragment_list_platform">
         <argument
@@ -30,7 +30,7 @@
     </fragment>
     <fragment
         android:id="@+id/listProductFragment"
-        android:name="com.example.proyectofinal.fragments.listProduct.ListProductFragment"
+        android:name="com.example.proyectofinal.fragments.ListProductFragment"
         android:label="fragment_list_product"
         tools:layout="@layout/fragment_list_product">
         <argument
@@ -42,7 +42,7 @@
     </fragment>
     <fragment
         android:id="@+id/productFragment"
-        android:name="com.example.proyectofinal.fragments.product.ProductFragment"
+        android:name="com.example.proyectofinal.fragments.ProductFragment"
         android:label="fragment_product"
         tools:layout="@layout/fragment_product">
         <argument
