--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -53,11 +53,6 @@
             app:destination="@id/logInFragment" />
     </fragment>
     <fragment
-        android:id="@+id/fragment23"
-        android:name="com.example.proyectofinal.fragments.Fragment2"
-        android:label="fragment_2"
-        tools:layout="@layout/fragment_2" />
-    <fragment
         android:id="@+id/logInFragment"
         android:name="com.example.proyectofinal.fragments.LogInFragment"
         android:label="fragment_log_in"
@@ -84,6 +79,9 @@
         <action
             android:id="@+id/action_listUserFragment_to_historyOrdersFragment"
             app:destination="@id/historyOrdersFragment" />
+        <action
+            android:id="@+id/action_listUserFragment_to_listFavoritesFragment"
+            app:destination="@id/listFavoritesFragment" />
     </fragment>
     <fragment
         android:id="@+id/checkInFragment"
@@ -116,5 +114,14 @@
         <argument
             android:name="id_order"
             app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/listFavoritesFragment"
+        android:name="com.example.proyectofinal.fragments.ListFavoritesFragment"
+        android:label="fragment_list_favorites"
+        tools:layout="@layout/fragment_list_favorites" >
+        <action
+            android:id="@+id/action_listFavoritesFragment_to_productFragment"
+            app:destination="@id/productFragment" />
     </fragment>
 </navigation>
