--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -20,13 +20,15 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline17"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:background="@color/black"/>
 
     <TextView
         android:id="@+id/txtNameFavorite"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:paddingStart="10dp"
         android:paddingRight="10dp"
         android:text="The Legend of Zelda A link Awakened"
@@ -49,7 +51,7 @@
         android:paddingRight="20dp"
         android:id="@+id/txtPriceFavorite"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="20dp"
         android:text="TextView"
         android:gravity="center|end"
         app:layout_constraintEnd_toEndOf="parent"
