--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -82,6 +82,9 @@
         <action
             android:id="@+id/action_listUserFragment_to_listFavoritesFragment"
             app:destination="@id/listFavoritesFragment" />
+        <action
+            android:id="@+id/action_listUserFragment_to_userFragment"
+            app:destination="@id/userFragment" />
     </fragment>
     <fragment
         android:id="@+id/checkInFragment"
@@ -96,6 +99,9 @@
         <action
             android:id="@+id/action_cartFragment_to_logInFragment"
             app:destination="@id/logInFragment" />
+        <action
+            android:id="@+id/action_cartFragment_to_orderFragment"
+            app:destination="@id/orderFragment" />
     </fragment>
     <fragment
         android:id="@+id/historyOrdersFragment"
@@ -124,4 +130,23 @@
             android:id="@+id/action_listFavoritesFragment_to_productFragment"
             app:destination="@id/productFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.example.proyectofinal.fragments.OrderFragment"
+        android:label="fragment_order"
+        tools:layout="@layout/fragment_order" >
+        <action
+            android:id="@+id/action_orderFragment_to_orderMade"
+            app:destination="@id/orderMade" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderMade"
+        android:name="com.example.proyectofinal.fragments.OrderMade"
+        android:label="fragment_order_made"
+        tools:layout="@layout/fragment_order_made" />
+    <fragment
+        android:id="@+id/userFragment"
+        android:name="com.example.proyectofinal.fragments.UserFragment"
+        android:label="fragment_user"
+        tools:layout="@layout/fragment_user" />
 </navigation>
