--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -122,6 +122,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tiEmailCheckIn">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="60dp" />
 
@@ -138,6 +139,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tiPasswordCheckIn">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="60dp" />
 
