--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -63,7 +63,7 @@
                 tools:layout_editor_absoluteX="0dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="60dp" />
 
